--- a/index.html
+++ b/index.html
@@ -20,67 +20,67 @@
             <div class="swiper-wrapper">
                 <div class="swiper-slide ">
                     <div class="element-slider">
-                        <img src="/img/icon_lenovo.svg" class="element__logo" alt="Lenovo">
+                        <img src="img/icon_lenovo.svg" class="element__logo" alt="Lenovo">
                         <button class="element__button"></button>
                     </div>
                 </div>
                 <div class="swiper-slide">
                     <div class="element-slider">
-                        <img src="/img/icon_samsung_png.png" class="element__logo" alt="Samsung">
+                        <img src="img/icon_samsung_png.png" class="element__logo" alt="Samsung">
                         <button class="element__button"></button>
                     </div>
                 </div>
                 <div class="swiper-slide">
                     <div class="element-slider">
-                        <img src="/img/icon_apple.svg" class="element__logo" alt="Apple">
+                        <img src="img/icon_apple.svg" class="element__logo" alt="Apple">
                         <button class="element__button"></button>
                     </div>
                 </div>
                 <div class="swiper-slide">
                     <div class="element-slider">
-                        <img src="/img/icon_viewsonic.svg" class="element__logo" alt="ViewSonic">
+                        <img src="img/icon_viewsonic.svg" class="element__logo" alt="ViewSonic">
                         <button class="element__button"></button>
                     </div>
                 </div>
                 <div class="swiper-slide">
                     <div class="element-slider">
-                        <img src="/img/icon_bosch.svg" class="element__logo" alt="bosch">
+                        <img src="img/icon_bosch.svg" class="element__logo" alt="bosch">
                         <button class="element__button"></button>
                     </div>
                 </div>
                 <div class="swiper-slide">
                     <div class="element-slider">
-                        <img src="/img/icon_hp.svg" class="element__logo" alt="hp">
+                        <img src="img/icon_hp.svg" class="element__logo" alt="hp">
                         <button class="element__button"></button>
                     </div>
                 </div>
                 <div class="swiper-slide">
                     <div class="element-slider">
-                        <img src="/img/icon_acer.svg" class="element__logo" alt="acer">
+                        <img src="img/icon_acer.svg" class="element__logo" alt="acer">
                         <button class="element__button"></button>
                     </div>
                 </div>
                 <div class="swiper-slide">
                     <div class="element-slider">
-                        <img src="/img/icon_sony.svg" class="element__logo" alt="sony">
+                        <img src="img/icon_sony.svg" class="element__logo" alt="sony">
                         <button class="element__button"></button>
                     </div>
                 </div>
                 <div class="swiper-slide">
                     <div class="element-slider">
-                        <img src="/img/icon_lenovo.svg" class="element__logo" alt="Lenovo">
+                        <img src="img/icon_lenovo.svg" class="element__logo" alt="Lenovo">
                         <button class="element__button"></button>
                     </div>
                 </div>
                 <div class="swiper-slide">
                     <div class="element-slider">
-                        <img src="/img/icon_samsung_png.png" class="element__logo" alt="Samsung">
+                        <img src="img/icon_samsung_png.png" class="element__logo" alt="Samsung">
                         <button class="element__button"></button>
                     </div>
                 </div>
                 <div class="swiper-slide">
                     <div class="element-slider">
-                        <img src="/img/icon_apple.svg" class="element__logo" alt="Apple">
+                        <img src="img/icon_apple.svg" class="element__logo" alt="Apple">
                         <button class="element__button"></button>
                     </div>
                 </div>
