--- a/index.html
+++ b/index.html
@@ -90,6 +90,6 @@
     </div> 
 </div>
     <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
-    <script src="/script2.js"></script>
+    <script src="script2.js"></script>
 </body>
 </html>
