--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                     </div>
                 </div>
                 <div class="swiper-slide">
-                    <div class="element-slider">
+                    <div class="element-slider hidden-width-1121">
                         <img src="img/icon_lenovo.svg" class="element__logo" alt="Lenovo">
                         <button class="element__button"></button>
                     </div>
@@ -78,7 +78,7 @@
                         <button class="element__button"></button>
                     </div>
                 </div>
-                <div class="swiper-slide">
+                <div class="swiper-slide" >
                     <div class="element-slider">
                         <img src="img/icon_apple.svg" class="element__logo" alt="Apple">
                         <button class="element__button"></button>
@@ -86,7 +86,24 @@
                 </div>
             </div>
             <div class="swiper-pagination"></div>
+            <div class="read-more">
+                <button class="button-read-more" type="button">
+                    <img class="button-read-more__image" src="img/main_icon_read.svg" alt="Посмотреть все"> 
+                    <span class="button-read-more__text">
+                        <b>Показать все</b>
+                    </span>
+                </button>
+            </div>
+            <div class="hidden-more hidden">
+                <button class="button-read-more" type="button">
+                    <img class="button-read-more__image" src="img/main_icon_hidden.svg" alt="Скрыть"> 
+                    <span class="button-read-more__text">
+                        <b>Скрыть</b>
+                    </span>
+                </button>
+            </div>
         </div>
+
     </div> 
 </div>
     <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
